@@ -13946,7 +13946,9 @@ _EOF_
 			if [ "$AUTOINSTALL_TIMEZONE" != "Europe/London" ]; then
 
 				echo -e "\nDietPi: Setting Timezone = $AUTOINSTALL_TIMEZONE"
-				echo -e "$AUTOINSTALL_TIMEZONE" > /etc/timezone
+				rm /etc/timezone
+				rm /etc/localtime
+				ln -fs /usr/share/zoneinfo/$AUTOINSTALL_TIMEZONE /etc/localtime
 				dpkg-reconfigure -f noninteractive tzdata
 
 			fi
